--- a/shop.html
+++ b/shop.html
@@ -54,7 +54,7 @@
                         <div class="bar"></div> 
                         <div class="bar"></div> 
                     </div> 
-                </div> 
+                </div>
             </div> 
         </div> 
     </header>
@@ -81,8 +81,8 @@
                 </div>
                 <hr>
                 <div class="chocolate-card-footer">
-                    <button href=class="buy">Buy</button>
-                    <button href="#" class="cart">Add to cart</button>
+                    <button href="#" class="buy">Buy</button>
+                    <a href="#" class="cart">Add to cart</a>
                 </div>
                 
             </div>
@@ -99,7 +99,8 @@
                 </div>
                 <hr>
                 <div class="chocolate-card-footer">
-                    <button>Buy</button>
+                    <button href="#" class="buy">Buy</button>
+                    <a href="#" class="cart">Add to cart</a>
                 </div>
             </div>
             <div class="chocolate-card">
@@ -115,7 +116,8 @@
                 </div>
                 <hr>
                 <div class="chocolate-card-footer">
-                    <button>Buy</button>
+                    <button href="#" class="buy">Buy</button>
+                    <a href="#" class="cart">Add to cart</a>
                 </div>
             </div>
             <div class="chocolate-card">
@@ -131,7 +133,8 @@
                 </div>
                 <hr>
                 <div class="chocolate-card-footer">
-                    <button>Buy</button>
+                    <button href="#" class="buy">Buy</button>
+                    <a href="#" class="cart">Add to cart</a>
                 </div>
             </div>
             <div class="chocolate-card">
@@ -147,7 +150,8 @@
                 </div>
                 <hr>
                 <div class="chocolate-card-footer">
-                    <button>Buy</button>
+                    <button href="#" class="buy">Buy</button>
+                    <a href="#" class="cart">Add to cart</a>
                 </div>
             </div>
             <div class="chocolate-card">
@@ -163,7 +167,8 @@
                 </div>
                 <hr>
                 <div class="chocolate-card-footer">
-                    <button>Buy</button>
+                    <button href="#" class="buy">Buy</button>
+                    <a href="#" class="cart">Add to cart</a>
                 </div>
             </div>
         </div>
